--- a/livestockapp/templates/animal_profile/list_animal_profile.html
+++ b/livestockapp/templates/animal_profile/list_animal_profile.html
@@ -20,7 +20,7 @@
         <th scope="col">Date Of Birth</th>
         <th scope="col">Description</th>
         <th scope="col">Gender</th>
-        <th scope="col">is_Pragnent</th>
+        <th scope="col">is_Pregnant</th>
         <th scope="col">pregnancy Start Date</th>
         <th scope="col">pregnancy End Date</th>
         <th scope="col">Status</th>
@@ -46,8 +46,7 @@
        <td>{{ani.date_of_birth|date:"d-m-Y"}}</td>
        <td>{{ani.description}}</td>
        <td>{{ani.gender}}</td> 
-       {% if  ani.is_pragnent == 1 %}
-      
+       {% if  ani.is_pregnant == 1 %}    
        <td>Yes</td>
        {% else %}
        <td></td>
@@ -56,8 +55,8 @@
        <td></td>
        <td></td>
        {% else %}
-       <td>{{ani.pragnancy_start_date|date:"d-m-Y"}}</td>
-       <td>{{ani.pragnancy_end_date|date:"d-m-Y"}}</td>
+       <td>{{ani.pregnancy_start_date|date:"d-m-Y"}}</td>
+       <td>{{ani.pregnancy_end_date|date:"d-m-Y"}}</td>
        {% endif %}
        {% if  ani.status == 1 %}
        <td>{{ani.status}}</td>
