--- a/livestockapp/templates/navbar.html
+++ b/livestockapp/templates/navbar.html
@@ -54,8 +54,8 @@
           Pregnancy_Detail
 </a>
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-  <a class="dropdown-item" href='/insert_pregnency_detail'>Add Pregnancy_Detail</a>
-  <a class="dropdown-item" href='/list_pregnency_detail'>Animal Pregnancy_Detail</a>
+  <a class="dropdown-item" href='/insert_pregnancy_detail'>Add Pregnancy_Detail</a>
+  <a class="dropdown-item" href='/list_pregnancy_detail'>Animal Pregnancy_Detail</a>
 </div>
       </li>
       
