--- a/livestockapp/templates/pregnancy_details/list_pregnancy_detail.html
+++ b/livestockapp/templates/pregnancy_details/list_pregnancy_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
    
 <div class="container my-3">
-  <h4 class="text-center alert alert-info py-3">List of Pragnancy Detail</h4>
+  <h4 class="text-center alert alert-info py-3">List of Pregnancy Detail</h4>
   {% if animal_det %}
   <table class="table table-bordered" id="animalDetail">
     <thead>
@@ -11,7 +11,7 @@
         <th scope="col">Start Date</th>
         <th scope="col">Expected End Date</th>
         <th scope="col">is Pregnancy Confirmed</th>
-        <th scope="col">Pragnancy Checked on</th>
+        <th scope="col">Pregnancy Checked on</th>
         <th scope="col">Description</th>
         <th scope="col">is Delivery Complete</th>
         <th scope="col">Actual Delivery Date</th>
@@ -36,33 +36,46 @@
      {% for det in animal_det %}
      <tr>
        <th scope="row">{{forloop.counter}}</th>
-
        <td>{{det.start_date|date:"d-m-Y" }}</td>  
        <td>{{det.expected_end_date|date:"d-m-Y"}}</td> 
-       <td>{{det.is_pregnancy_confirmed}}</td>
-       <td>{{det.pregnancy_checked_on|date:"d-m-Y"}}</td>
-      
+       {% if  det.is_pregnancy_confirmed == 1 %}     
+       <td>Yes</td>
+       {% else %}
+       <td></td>
+       {% endif %}  
+       <td>{{det.pregnancy_checked_on|date:"d-m-Y"}}</td>      
        <td>{{det.description}}</td>
-       <td>{{det.is_delivery_completed}}</td>
+       {% if  det.is_delivery_completed == 1 %}     
+       <td>Yes</td>
+       {% else %}
+       <td></td>
+       {% endif %}  
        <td>{{det.actual_delivery_date|date:"d-m-Y"}}</td> 
-       <td>{{det.is_miscarriage}}</td>  
-       <td>{{det.miscarriage_date|date:"d-m-Y"}}</td>
-       <td>{{det.infartility}}</td> 
-       {% if  det.is_pragnent %}
-      
+       {% if  det.is_miscarriage == 1 %}     
+       <td>Yes</td>
+       {% else %}
+       <td></td>
+       {% endif %}  
+       <td>{{det.miscarriage_date|date:"d-m-Y"}}</td>     
+       {% if  det.infartility == 1 %}     
        <td>Yes</td>
        {% else %}
        <td></td>
        {% endif %}
-       <td>{{det.pragnancy_start_date|date:"d-m-Y"}}</td>
-       <td>{{det.pragnancy_end_date|date:"d-m-Y"}}</td>
+       {% if  det.is_pregnant == 1 %}     
+       <td>Yes</td>
+       {% else %}
+       <td></td>
+       {% endif %}
+       <td>{{det.pregnancy_start_date|date:"d-m-Y"}}</td>
+       <td>{{det.pregnancy_end_date|date:"d-m-Y"}}</td>
        <td>{{det.animal_id}}</td>  
        <td>{{det.created_by}}</td>  
        <td>{{det.created_on|date:"d-m-Y" }}</td>  
        <td>{{det.updated_by}}</td>  
        <td>{{det.updated_on|date:"d-m-Y"}}</td> 
-       <td><a href="/animal_det_edit/{{det.Pregnancy_id}}" class="btn btn-sm btn-warning"/>Edit</td>
-       <td><a href="/animal_det_delete/{{det.Pregnancy_id}}" class="btn btn-sm btn-danger"/>Delete</td>
+       <td><a href="/pregnancy_det_edit/{{det.pregnancy_id}}" class="btn btn-sm btn-warning"/>Edit</td>
+       <td><a href="/pregnancy_det_delete/{{det.pregnancy_id}}" class="btn btn-sm btn-danger"/>Delete</td>
       </tr>
       {% endfor %}
     </tbody>
