--- a/livestockapp/templates/animal_category/list.html
+++ b/livestockapp/templates/animal_category/list.html
@@ -10,7 +10,7 @@
         <th scope="col">#</th>
         <th scope="col">Name</th>
         <th scope="col">Description</th>
-        <th scope="col">Is Active</th>
+        <th scope="col">Status</th>
         <th scope="col">Created On</th>
         <th scope="col">Updated On</th>
         <th scope="col">Edit</th>
@@ -25,7 +25,11 @@
        <th scope="row">{{forloop.counter}}</th>
        <td>{{cat.name}}</td>
        <td>{{cat.description}}</td>
-       <td>{{cat.is_active}}</td>  
+       {% if cat.is_active == 1 %}
+       <td>Active</td>  
+       {% else %}
+       <td>InActive</td>
+       {% endif %}
        <td>{{cat.created_on|date:"d-m-Y" }}</td>  
        <td>{{cat.updated_on |date:"d-m-Y"}}</td> 
        <td><a href="/edit/{{cat.category_id}}" class="btn btn-sm btn-warning"/>Edit</td>
