User Profile added

--- a/livestockapp/templates/navbar.html
+++ b/livestockapp/templates/navbar.html
@@ -51,6 +51,15 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          User Profile
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href='/register_user_profile'>Create User Profile</a>
+          <a class="dropdown-item" href='/list_user_profile'>User List</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Pregnancy_Detail
 </a>
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
