--- a/livestockapp/templates/user_profile/list_user_profile.html
+++ b/livestockapp/templates/user_profile/list_user_profile.html
@@ -25,9 +25,7 @@
        <td>{{users.first_name}}</td>
        <td>{{users.last_name}}</td>
        <td>{{users.username}}</td>
-       <td>{{users.email}}</td>
-
-       
+       <td>{{users.email}}</td>       
      <!--  {% if  ani.is_pregnant == 1 %}    
        <td>Yes</td>
        {% else %}
@@ -45,9 +43,8 @@
        {% else %}
        <td>InActive</td>
        {% endif %}
-
-       <td><a href="/animal_pro_edit/{{ani.animal_id}}" class="btn btn-sm btn-warning"/>Edit</td>
-       <td><a href="/animal_pro_delete/{{ani.animal_id}}" class="btn btn-sm btn-danger"/>Delete</td>
+       <td><a href="/edit_user_profile/{{users.id}}" class="btn btn-sm btn-warning"/>Edit</td>
+       <td><a href="/delete_user_profile/{{users.id}}" class="btn btn-sm btn-danger"/>Delete</td>
       </tr>
       {% endfor %}
     </tbody>
