--- a/livestockapp/templates/user_profile/update_user_profile.html
+++ b/livestockapp/templates/user_profile/update_user_profile.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>User Profile</title>
+    <title>Update User Profile</title>
   </head>
 <body>
   
@@ -14,41 +14,41 @@
 {% comment %} <div class="container my-3"> 
   <div  style="margin-left:30%; margin-top:-42%; "><b></b></div> {% endcomment %}
 
-  <form action='/register_user_profile/' method="POST" >
-    <div class="alert alert-dark mt-5  " role="alert" style="margin-top:20%;"><b >User Profile</b></div>
+  <form action='/update_user_profile/{{user_profile.id}}' method="POST" >
+    <div class="alert alert-dark mt-5 row " role="alert" style="margin-top:50%;"><b >Update User Info</b></div>
     {% if error2 %}
-    <div class="alert alert-danger " role="alert">
+    <div class="alert alert-danger offset-2" role="alert">
       Please Enter First Name !!    
     </div>
     {% endif %}  
     {% if error3 %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger offset-2"  role="alert">
       Please Enter Last Name !!    
     </div>
     {% endif %} 
     {% if error4 %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger offset-2" role="alert">
       Please Enter username !!    
     </div>
     {% endif %} 
     {% if error5 %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger offset-2" role="alert">
       Please Enter Email !!    
     </div>
     {% endif %} 
     {% if error6 %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger offset-2" role="alert">
       Please Enter User Role !!    
     </div>
     {% endif %} 
 
     {% if error8 %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger offset-2" role="alert">
       Please Enter Gender !!    
     </div>
     {% endif %} 
     {% if error9 %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger offset-2" role="alert">
       Please Enter is_Active Field !!    
     </div>
     {% endif %} 
@@ -58,24 +58,27 @@
     <div class="container-fluid" >
     <div class="row">
       <div class="col">
+        <input type="text" class="form-control" name="id" required maxlength="50" value="{{user_profile.id}}" readonly hidden/>
+    <div class="row">
+      <div class="col">
         <label class=" control-label">First Name :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="text" class="form-control" id="first_name" name="first_name"  >
+        <input type="text" class="form-control" id="first_name" name="first_name"  value="{{user_profile.first_name}}">
       </div>
       <div class="col">
           <label class=" control-label">Last Name :<span style="color:red; font-weight:bold;">*</span></label>
-          <input type="text" class="form-control" id="last_name" name="last_name"  >
+          <input type="text" class="form-control" id="last_name" name="last_name"  value="{{user_profile.last_name}}">
       </div>
       <div class="col">
         <label class=" control-label">username :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="text" class="form-control" id="username" name="username"  >
+        <input type="text" class="form-control" id="username" name="username"  value="{{user_profile.username}}">
       </div>
       <div class="col">
         <label class=" control-label">Email :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="text" class="form-control" id="email" name="email"  >
+        <input type="text" class="form-control" id="email" name="email" value="{{user_profile.email}}" >
       </div>
       <div class="col">
         <label class=" control-label">Phone Number :</label>
-        <input type="text" class="form-control" id="phone_number" name="phone_number"  >
+        <input type="text" class="form-control" id="phone_number" name="phone_number" value="{{user_profile.phone_number}}" >
       </div>
     </div>
     
@@ -92,31 +95,41 @@
       </div>
       <div class="col" >
         <label for="purchase_price ">City :</label>
-        <input type="text" class="form-control" id="city" name="city"  >
+        <input type="text" class="form-control" id="city" name="city" value="{{user_profile.city}}" >
       </div>
       <div class="col" >
         <label for="purchased_date">Country :</label>
-        <input type="text" class="form-control" id="country" name="country" >
+        <input type="text" class="form-control" id="country" name="country" value="{{user_profile.country}}" >
       </div>
     
       <div class="col" >
         <label class=" control-label">Date of Birth :</label>
-        <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" >
+        <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" value="{{user_profile.date_of_birth}}">
       </div>
     </div>
     <div class="row" style="margin-top:10px;">
       
       <div class="col" >
-		    <label class=" control-label">Gender : <span style="color:red; font-weight:bold;">*</span></label>
-        <select onchange="changeDropdown(this.value);" name="gender" class="form-control"  id="gender" class="gender">
-          <option value="">Select Gender</option>
-          <option value="male" >Male</option>
-          <option value="female">Female</option>
-        </select>
+		     <label class=" control-label">Gender : <span style="color:red; font-weight:bold;">*</span></label>
+            <select  name="gender" class="form-control" required="required" id="gender" class="gender">
+               {% if user_profile.gender == 'male' %}
+                 <option value="male" selected >Male</option>
+                 <option value="female" >Female</option>
+                 
+               {% else  %}
+               <option value="female" selected>Female</option>
+               <option value="male" >male</option>
+               {% endif %}
+               
+             </select>
       </div>
       <div class="col" >
         <label for="status" >is Active :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="checkbox"  id="status" name="status">
+        {% if user_profile.status == 1 %}
+          <input type="checkbox" checked id="status" name="status" value="{{user_profile.status}}">
+        {% else %}
+          <input type="checkbox"  id="status" name="status" value="{{user_profile.status}}">
+        {% endif %}
         <input type="text"  id="status_val" name="status_val"  value="0" >
       </div>
       <div class="col" >
@@ -127,7 +140,7 @@
     <div class="row" style="margin-top:10px;">
       <div class="col">
         <label for="description" >Description :</label>
-        <textarea id="description" class="form-control" name="description" rows="3" cols="50"></textarea>
+        <textarea id="description" class="form-control" name="description" rows="3" cols="50" >{{user_profile.description}}</textarea>
       </div>
     </div>
     <div>
