--- a/livestockapp/templates/animal_profile/insert_animal_profile.html
+++ b/livestockapp/templates/animal_profile/insert_animal_profile.html
@@ -73,6 +73,11 @@
       Please Enter Gender!!    
     </div>
     {% endif %} 
+    {% if error7 %}
+    <div class="alert alert-danger offset-2" role="alert">
+      Please Enter Person!!    
+    </div>
+    {% endif %} 
 
     {% if error8 %}
     <div class="alert alert-danger offset-2" role="alert">
@@ -117,6 +122,7 @@
         {% endfor %}
         </select>
       </div>
+      
       <div class="col" >
         <label for="purchase_price ">Purchase Price :</label>
         <input type="text" class="form-control" id="purchase_price" name="purchase_price"  >
@@ -146,9 +152,23 @@
         </select>
       </div>
       <div class="col" >
+        <label class="from-group" >Person:<span style="color:red; font-weight:bold;">*</span></label>
+        <select id="person_id" name="person_id"  class="form-control">
+          <option value="">Select Person</option>
+          {% for x in per %}
+          <option value="{{x.id}}">{{x.username}}</option>  
+        {% endfor %}
+        </select>     
       </div>
-      <div class="col" >
+      <div  class="col">
+        <label class=" control-label" > Start Date :</label>
+        <input type="date" class="form-control"  name="start_date"  >
       </div>
+      <div class="col"  >
+        <label for="end_date" class=" control-label" > End Date :</label>
+        <input type="date" class="form-control"  name="end_date" value="" >
+      </div>
+      
     </div>
     <div class="row">
       <div class="col" >
