--- a/livestockapp/templates/animal_profile/list_animal_profile.html
+++ b/livestockapp/templates/animal_profile/list_animal_profile.html
@@ -20,6 +20,9 @@
         <th scope="col">Date Of Birth</th>
         <th scope="col">Description</th>
         <th scope="col">Gender</th>
+        <th scope="col">Person</th>
+        <th scope="col">Start Date</th>
+        <th scope="col">End Date</th>
         <th scope="col">Status</th>
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
@@ -27,41 +30,32 @@
       </tr>
     </thead>
     <tbody>
-     {% for ani in animal_pro %}
+     {% for animal in animal_pro %}
      <tr>
        <th scope="row">{{forloop.counter}}</th>
-       <td>{{ani.token_no}}</td>
-       <td>{{ani.name}}</td>
-       <td>{{ani.color}}</td>
-       <td>{{ani.weight}}</td>
-       <td>{{ani.category.name}}</td>
-       <td>{{ani.image}}</td>
-       <td>{{ani.purchase_price}}</td>
-       <td>{{ani.purchased_on|date:"d-m-Y"}}</td>
-       <td>{{ani.purchased_by}}</td>
-       <td>{{ani.date_of_birth|date:"d-m-Y"}}</td>
-       <td>{{ani.description}}</td>
-       <td>{{ani.gender}}</td> 
-     <!--  {% if  ani.is_pregnant == 1 %}    
-       <td>Yes</td>
-       {% else %}
-       <td></td>
-       {% endif %}
-       {% if  ani.gender == male %}
-       <td></td>
-       <td></td>
-       {% else %}
-       <td>{{ani.pregnancy_start_date|date:"d-m-Y"}}</td>
-       <td>{{ani.pregnancy_end_date|date:"d-m-Y"}}</td>
-       {% endif %}-->
-       {% if  ani.status == 1 %}
+       <td>{{animal.token_no}}</td>
+       <td>{{animal.name}}</td>
+       <td>{{animal.color}}</td>
+       <td>{{animal.weight}}</td>
+       <td>{{animal.category.name}}</td>
+       <td>{{animal.image}}</td>
+       <td>{{animal.purchase_price}}</td>
+       <td>{{animal.purchased_on|date:"d-m-Y"}}</td>
+       <td>{{animal.purchased_by}}</td>
+       <td>{{animal.date_of_birth|date:"d-m-Y"}}</td>
+       <td>{{animal.description}}</td>
+       <td>{{animal.gender}}</td> 
+       <td>{{animal.person.username}}</td>
+       <td>{{animal.start_date|date:"d-m-Y"}}</td>
+       <td>{{animal.end_date|date:"d-m-Y"}}</td>      
+       {% if  animal.status == 1 %} 
        <td>Active</td>
        {% else %}
        <td>InActive</td>
        {% endif %}
 
-       <td><a href="/animal_pro_edit/{{ani.animal_id}}" class="btn btn-sm btn-warning"/>Edit</td>
-       <td><a href="/animal_pro_delete/{{ani.animal_id}}" class="btn btn-sm btn-danger"/>Delete</td>
+       <td><a href="/animal_pro_edit/{{animal.animal_id}}" class="btn btn-sm btn-warning"/>Edit</td>
+       <td><a href="/animal_pro_delete/{{animal.animal_id}}" class="btn btn-sm btn-danger"/>Delete</td>
       </tr>
       {% endfor %}
     </tbody>
