--- a/livestockapp/templates/navbar.html
+++ b/livestockapp/templates/navbar.html
@@ -60,6 +60,15 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Groups
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href='/insert_group'>Add Groups</a>
+          <a class="dropdown-item" href='/list_group'>Group List</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Pregnancy_Detail
 </a>
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
