working on list of animals~

--- a/livestockapp/templates/user_profile/register_user_profile.html
+++ b/livestockapp/templates/user_profile/register_user_profile.html
@@ -17,38 +17,38 @@
   <form action='/register_user_profile/' method="POST" >
     <div class="alert alert-dark mt-5 row " role="alert" style="margin-top:50%;"><b >User Info</b></div>
     {% if error2 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter First Name !!    
     </div>
     {% endif %}  
     {% if error3 %}
-    <div class="alert alert-danger offset-2"  role="alert">
+    <div class="alert alert-danger"  role="alert">
       Please Enter Last Name !!    
     </div>
     {% endif %} 
     {% if error4 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter username !!    
     </div>
     {% endif %} 
     {% if error5 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter Email !!    
     </div>
     {% endif %} 
     {% if error6 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter User Role !!    
     </div>
     {% endif %} 
 
     {% if error8 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter Gender !!    
     </div>
     {% endif %} 
     {% if error9 %}
-    <div class="alert alert-danger offset-2" role="alert">
+    <div class="alert alert-danger" role="alert">
       Please Enter is_Active Field !!    
     </div>
     {% endif %} 
