Animal pregnancy list is completed by using raw query

--- a/livestockapp/templates/animal_profile/list_animal_profile.html
+++ b/livestockapp/templates/animal_profile/list_animal_profile.html
@@ -45,7 +45,7 @@
        <td>{{animal.date_of_birth|date:"d-m-Y"}}</td>
        <td>{{animal.description}}</td>
        <td>{{animal.gender}}</td> 
-       <td>{{animal.person.username}}</td>
+       <td>{{animal.user.username}}</td>
        <td>{{animal.start_date|date:"d-m-Y"}}</td>
        <td>{{animal.end_date|date:"d-m-Y"}}</td>      
        {% if  animal.status == 1 %} 
